--- a/swecha_design_page.html
+++ b/swecha_design_page.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
@@ -20,7 +20,7 @@
 
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
-.col-3 {width: 16;}
+.col-3 {width: 25%;}
 .col-4 {width: 33.33%;}
 .col-5 {width: 41.66%;}
 .col-6 {width: 50%;}
@@ -127,7 +127,7 @@ text-align: center  !h1;
               
 <ul id="superfish-primary-links" class="menu sf-menu sf-primary-links sf-horizontal sf-style-white">
   
-<li  style="font-size:30px"id="primary-links-menu-link-contentccc7c876-77a0-4eba-96d2-aabca1261d31" class="active-trail sf-depth-1 sf-no-children"><a href="https://swecha.org/" title="" class="sf-depth-1">Home</a></li><li  style="font-size:30px" id="primary-links-menu-link-contenta673f313-b70b-410d-b5a0-987d276b5688" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/about" title="" class="sf-depth-1">About Us</a></li><li style="font-size:30px" id="primary-links-menu-link-contentc74d65f4-adea-4712-880c-dfdfec469044" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/events" class="sf-depth-1">Events</a></li><li  style="font-size:30px"id="primary-links-menu-link-content34ce9528-5198-4356-9b6d-84e0a8cd7ed8" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/campaigns" class="sf-depth-1">Campaigns</a></li><li  style="font-size:30px"id="primary-links-menu-link-contentf210815f-a24e-4423-a4ca-58ba2e51dab5" class="active-trail sf-depth-1 sf-no-children"><a href="https://swecha.org/" title="" class="sf-depth-1">Press Releases</a></li><li  style="font-size:30px" id="primary-links-menu-link-contentc0f09a32-df0b-457b-9c3a-3c2c0bbd06ba" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/node/9253" class="sf-depth-1">Contact us</a></li>
+<li id="primary-links-menu-link-contentccc7c876-77a0-4eba-96d2-aabca1261d31" class="active-trail sf-depth-1 sf-no-children"><a href="https://swecha.org/" title="" class="sf-depth-1">Home</a></li><li id="primary-links-menu-link-contenta673f313-b70b-410d-b5a0-987d276b5688" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/about" title="" class="sf-depth-1">About Us</a></li><li id="primary-links-menu-link-contentc74d65f4-adea-4712-880c-dfdfec469044" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/events" class="sf-depth-1">Events</a></li><li id="primary-links-menu-link-content34ce9528-5198-4356-9b6d-84e0a8cd7ed8" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/campaigns" class="sf-depth-1">Campaigns</a></li><li id="primary-links-menu-link-contentf210815f-a24e-4423-a4ca-58ba2e51dab5" class="active-trail sf-depth-1 sf-no-children"><a href="https://swecha.org/" title="" class="sf-depth-1">Press Releases</a></li><li id="primary-links-menu-link-contentc0f09a32-df0b-457b-9c3a-3c2c0bbd06ba" class="sf-depth-1 sf-no-children"><a href="https://swecha.org/node/9253" class="sf-depth-1">Contact us</a></li>
 </ul>
 
     
@@ -139,7 +139,7 @@ text-align: center  !h1;
 <center>
 <br><br>
 
-    <b style="font-size: 50px; font-family: 'Tangerine', serif;">Choose Language</b>
+    <b style="font-size: 40px; font-family: 'Tangerine', serif;">Choose Language</b>
 
 
     <script type="text/javascript">
@@ -158,10 +158,9 @@ text-align: center  !h1;
 <li> "tick" show hint for the on click hint </li>
 </center>
 <br></br>
-<center  style="font-size: 20px;font-family: 'Tangerine', serif;">
- <style>"font-size: 20px;font-family:'Tangerine', serif;"</style>
+<center  style="font-size: 15px;font-family: 'Tangerine', serif;">
+ <style>"font-size: 15px;font-family:'Tangerine', serif;"</style>
   For more information contact webmaster |AT| swecha |DOT| net 
 </center>
 </body>
 </html>
-
